--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,17 @@
 version: '3.8'
 services:
+  postgres:
+    image: postgres:latest
+    container_name: user_database
+    environment:
+      POSTGRES_DB: user_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   mongo:
     image: mongo
     ports:
